@@ -10,7 +10,6 @@ import lombok.AllArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @AllArgsConstructor
@@ -38,7 +37,7 @@ public class GetFilteredReservationsUseCaseImpl implements GetFilteredReservatio
                             request.getEndDate()
                     ).orElse(List.of()).stream()
                     .map(ReservationConverter::convert)
-                    .collect(Collectors.toList());
+                    .toList();
 
             return GetFilteredReservationsResponse.builder()
                     .filteredReservations(filteredReservations)
